@@ -26,6 +26,7 @@ icinga (1.13.3-4) UNRELEASED; urgency=medium
   * Use rm -f for all rm commands.
   * Don't set {C,CPP,LD}FLAGS explicitly, already set by debhelper.
   * Add build dependencies for test target.
+  * Override dh_auto_test to create required directories.
 
  -- Bas Couwenberg <sebastic@debian.org>  Sat, 03 Dec 2016 23:27:06 +0100
 
